# course-optimisation-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.cpp  profile.sh  test.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
references/: iso-sphere-on-plane.hash  monkey-on-plane.hash  sphere-galaxy-on-plane.hash  two-spheres-on-plane.hash  two-triangles-on-plane.hash
scenes/: all.json  iso-sphere-on-plane.json  monkey-on-plane.json  sphere-galaxy-on-plane.json  two-spheres-on-plane.json  two-triangles-on-plane.json
scenes/objects/: cube.mtl  sphere.mtl
src/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
src/objloader/: OBJ_Loader.h
src/rayimage/: CMakeLists.txt  Image.cpp  Image.hpp
src/raymath/: AABB.cpp  AABB.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Matrix.cpp  Matrix.hpp  Ray.cpp  Ray.hpp  Transform.cpp  Transform.hpp  Vector3.cpp  Vector3.hpp
src/rayscene/: BSPTree.cpp  BSPTree.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CheckerMaterial.cpp  CheckerMaterial.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
